# my-personal-crm

./: .gitignore  .mcp.json  ARCHITECTURE.md  LICENSE.md  README.md  docker-compose.yaml
.claude/agents/: react-ui-implementer.md  senior-design-reviewer.md  senior-uiux-reviewer.md  ui-implementation-engineer.md
.cursor/plans/: personal-crm-implementation_a1249787.plan.md
.github/workflows/: backend.yml  backend_ci.yml  frontend.yml  frontend_ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.migrations  README.md  SECURITY_UPGRADE.md  alembic.ini  check_schema.py  docker-compose.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  7e6edb1ed469_add_unique_constraint_to_status_name.py
backend/migrations/: 000_initial_schema.sql  001_add_rls_index.sql  README.md
backend/src/app/: __init__.py  main.py
backend/src/app/api/: __init__.py  dependencies.py
backend/src/app/api/v1/: auth.py  contacts.py  graph.py  kanban.py  router.py  statuses.py  suggestions.py
backend/src/app/core/: __init__.py  config.py  deps.py  errors.py  logging.py  security.py  settings.py  startup.py
backend/src/app/db/: __init__.py  database.py  migrations.py
backend/src/app/models/: __init__.py  association.py  auth.py  base.py  contact.py  lookup.py  status.py  tables.py
backend/src/app/schemas/: __init__.py  auth.py  contact.py  graph.py  kanban.py  status.py  suggestion.py
backend/src/app/services/: __init__.py  auth.py  contacts.py  graph.py  storage.py  supabase.py
backend/src/app/utils/: __init__.py  security.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/nginx/: default.conf  default.conf.template
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/auth/: LoginForm.tsx  ProtectedRoute.tsx  SetupOwnerForm.tsx  index.ts
frontend/src/components/contacts/: ContactCard.tsx  ContactForm.tsx  PersonCard.tsx  PhotoUpload.tsx  index.ts
frontend/src/components/graph/: AssociationEdge.tsx  ContactNode.tsx  GraphView.tsx  index.ts
frontend/src/components/kanban/: FilterPanel.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  StatusManagement.tsx  index.ts
frontend/src/components/layout/: Header.tsx  Layout.tsx  index.ts
frontend/src/components/ui/: Autocomplete.tsx  Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Select.tsx  Skeleton.tsx  Spinner.tsx  Textarea.tsx  index.ts
frontend/src/config/: env.ts
frontend/src/hooks/: index.ts  useAuth.tsx  useContacts.ts  useForceLayout.ts  useGraph.ts  useKanban.ts  useStatuses.ts  useSuggestions.ts
frontend/src/pages/: AddContactPage.tsx  ContactsPage.tsx  DashboardPage.tsx  GraphPage.tsx  KanbanPage.tsx  LoginPage.tsx  SetupPage.tsx
frontend/src/services/: api.ts  auth.ts  contacts.ts  graph.ts  index.ts  kanban.ts  statuses.ts  suggestions.ts
frontend/src/types/: api.ts  auth.ts  contact.ts  graph.ts  index.ts  kanban.ts  react-graph-vis.d.ts  status.ts  suggestion.ts
